--- a/playbooks/inventory.yaml
+++ b/playbooks/inventory.yaml
@@ -1,13 +1,8 @@
-myhosts:
- hosts:
-  my_host_01:
-    ansible_host: 192.168.0.200
-  my_host_02:
-    ansible_host: 192.168.0.201
-  my_host_03:
-    ansible_host: 192.168.0.202
-  my_host_04:
-    ansible_host: 192.168.0.203
-  my_host_05:
-    ansible_host: 192.168.0.204
-  
+"myhosts":
+  "hosts":
+    "ubuntu-container1":
+      "ansible_host": "192.168.0.200"
+    "ubuntu-container2":
+      "ansible_host": "192.168.0.201"
+    "ubuntu-container3":
+      "ansible_host": "192.168.0.202"
